--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,6 +5,20 @@ set_real_ip_from 100.42.28.67;
 set_real_ip_from 100.42.28.68;
 set_real_ip_from 100.42.28.69;
 set_real_ip_from 100.42.28.70;
+set_real_ip_from 100.42.29.160;
+set_real_ip_from 100.42.29.161;
+set_real_ip_from 100.42.29.162;
+set_real_ip_from 100.42.29.163;
+set_real_ip_from 100.42.29.164;
+set_real_ip_from 100.42.29.165;
+set_real_ip_from 100.42.29.166;
+set_real_ip_from 100.42.29.167;
+set_real_ip_from 100.42.29.168;
+set_real_ip_from 100.42.29.169;
+set_real_ip_from 100.42.29.170;
+set_real_ip_from 100.42.29.171;
+set_real_ip_from 100.42.29.172;
+set_real_ip_from 100.42.29.173;
 set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.117.167;
 set_real_ip_from 102.130.127.117;
@@ -113,6 +127,7 @@ set_real_ip_from 109.71.252.88;
 set_real_ip_from 109.71.252.97;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
 set_real_ip_from 121.78.28.166;
@@ -170,7 +185,6 @@ set_real_ip_from 162.220.14.78;
 set_real_ip_from 162.251.5.152;
 set_real_ip_from 163.172.45.102;
 set_real_ip_from 164.132.172.209;
-set_real_ip_from 165.154.59.197;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
 set_real_ip_from 171.25.193.131;
@@ -713,6 +727,7 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:545c::b;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -820,6 +835,7 @@ set_real_ip_from 204.8.96.86;
 set_real_ip_from 204.8.96.87;
 set_real_ip_from 204.8.96.88;
 set_real_ip_from 204.8.96.89;
+set_real_ip_from 205.185.113.180;
 set_real_ip_from 205.185.113.8;
 set_real_ip_from 205.185.116.215;
 set_real_ip_from 205.185.116.34;
@@ -967,6 +983,7 @@ set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
 set_real_ip_from 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 set_real_ip_from 2605:6400:20:2417::69;
 set_real_ip_from 2605:6400:20:3ea:c2a3:1162:7224:e5df;
+set_real_ip_from 2605:6400:20:482:3920:1829:1839:1293;
 set_real_ip_from 2605:6400:20:be7::1;
 set_real_ip_from 2605:6400:20:c26:5163:253e:1ef6:d887;
 set_real_ip_from 2605:6400:20:c26:5163:253e:1ef6:d896;
@@ -1455,7 +1472,9 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:44;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:64;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:92;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b02b:1337:3;
+set_real_ip_from 2a0e:97c0:3e3:460:1337:b03b:1337:4;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b05b:1337:6;
+set_real_ip_from 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
@@ -1821,7 +1840,6 @@ set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.226.13;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 85.239.41.130;
-set_real_ip_from 85.239.55.132;
 set_real_ip_from 85.90.196.162;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.54.25.3;
