--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -22,6 +22,7 @@ allow 100.42.29.173;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
+allow 102.211.56.12;
 allow 103.109.101.105;
 allow 103.146.203.11;
 allow 103.164.54.199;
@@ -127,6 +128,7 @@ allow 109.71.252.88;
 allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.35.245.150;
+allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
 allow 121.78.28.166;
@@ -222,7 +224,7 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
-allow 177.149.142.24;
+allow 177.149.152.224;
 allow 177.153.51.238;
 allow 177.93.140.66;
 allow 178.17.170.144;
@@ -726,6 +728,7 @@ allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:545c::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1252,7 +1255,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1295,6 +1297,7 @@ allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:6301:0:4f3:c39b:cae7:2893:78d3;
+allow 2a0a:3840:8078:28:0:504e:1c99:1337;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:f4c0:16c:10::1;
@@ -1576,6 +1579,7 @@ allow 2a12:a800:9:1:193:26:115:61;
 allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a12:de40:21:1be4::;
+allow 2c0f:6c0:0:2::6983;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
@@ -1654,6 +1658,8 @@ allow 45.142.203.182;
 allow 45.143.200.32;
 allow 45.145.93.133;
 allow 45.148.10.111;
+allow 45.153.34.221;
+allow 45.153.34.246;
 allow 45.154.98.33;
 allow 45.38.20.81;
 allow 45.61.137.205;
@@ -1744,7 +1750,6 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1811,6 +1816,7 @@ allow 78.47.85.83;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
+allow 80.78.28.153;
 allow 80.82.78.14;
 allow 80.94.92.106;
 allow 80.94.92.135;
