--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -23,6 +23,7 @@ allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
 allow 102.211.56.12;
+allow 102.211.56.200;
 allow 103.109.101.105;
 allow 103.146.203.11;
 allow 103.164.54.199;
@@ -600,7 +601,7 @@ allow 195.47.238.92;
 allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
-allow 198.167.206.155;
+allow 198.167.206.172;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -1297,7 +1298,6 @@ allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:6301:0:4f3:c39b:cae7:2893:78d3;
-allow 2a0a:3840:8078:28:0:504e:1c99:1337;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:f4c0:16c:10::1;
@@ -1471,6 +1471,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:4005:1002:ffff:185:40:4:44;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
+allow 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 allow 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 allow 2a0e:97c0:3e3:460:1337:b02b:1337:3;
 allow 2a0e:97c0:3e3:460:1337:b03b:1337:4;
@@ -1580,6 +1581,7 @@ allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a12:de40:21:1be4::;
 allow 2c0f:6c0:0:2::6983;
+allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
@@ -1658,8 +1660,6 @@ allow 45.142.203.182;
 allow 45.143.200.32;
 allow 45.145.93.133;
 allow 45.148.10.111;
-allow 45.153.34.221;
-allow 45.153.34.246;
 allow 45.154.98.33;
 allow 45.38.20.81;
 allow 45.61.137.205;
@@ -1816,7 +1816,6 @@ allow 78.47.85.83;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
-allow 80.78.28.153;
 allow 80.82.78.14;
 allow 80.94.92.106;
 allow 80.94.92.135;
@@ -1832,7 +1831,6 @@ allow 82.153.138.7;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
-allow 82.29.128.140;
 allow 82.29.128.145;
 allow 83.147.17.190;
 allow 83.217.9.73;
